[tool.poetry]
name = "django-hamlpy"
version = "1.4.4"
description = "HAML like syntax for Django templates"
authors = ["Nyaruka <code@nyaruka.com>"]
readme = "README.md"
license = "MIT"
classifiers=[
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Framework :: Django",
]
packages = [
    { include = "hamlpy" },
]

[tool.poetry.urls]
repository = "http://github.com/nyaruka/django-hamlpy"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
regex = ">=2020.1.1"

[tool.poetry.dev-dependencies]
Markdown = "^3.3.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^3.8.4"
Pygments = "2.14.0"
codecov = "^2.1.10"
Jinja2 = "^3.1.2"
black = "^22.1.0"
isort = "^5.10.1"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501", "F405"]
fix = true

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 119
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
known_django = ["django"]

[tool.coverage.run]
source = ["./hamlpy"]

[tool.coverage.report]
ignore_errors = true
precision = 0
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: needs cover",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
omit = ["hamlpy/test/*"]


[tool.poetry.scripts]
hamlpy-watcher = "hamlpy.hamlpy_watcher:watch_folder"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
